--- a/my-react-app/src/styles/ChatContainer.css
+++ b/my-react-app/src/styles/ChatContainer.css
@@ -1,57 +1,57 @@
 .chat-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    transition: all 0.5s ease-in-out;
-    border-radius: 20px;
-    overflow: hidden;
-    opacity: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  transition: all 0.5s ease-in-out;
+  border-radius: 20px;
+  overflow: hidden;
+  opacity: 1;
 }
 
 .chat-section.active .chat-container {
-    opacity: 1;
+  opacity: 1;
 }
 
 .chat-messages {
-    flex: 1;
-    overflow-y: auto;
-    padding: 20px;
-    background-color: #FFEBCD;
-    border-radius: 18px 18px 0 0;
-    opacity: 0;
-    max-height: 0;
-    transition: all 0.5s ease-in-out;
-    display: none;
-    scrollbar-width: thin;
-    scrollbar-color: transparent transparent;
+  flex: 1;
+  overflow-y: auto;
+  padding: 0 20px;
+  background-color: #ffebcd;
+  border-radius: 18px 18px 0 0;
+  opacity: 0;
+  height: 0;
+  transition: all 0.5s ease-in-out;
+  display: none;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
 }
 .dark-mode .chat-messages {
-    background-color: #121212;
+  background-color: #121212;
 }
 
 .chat-messages::-webkit-scrollbar {
-    width: 6px;
+  width: 6px;
 }
 
 .chat-messages::-webkit-scrollbar-track {
-    background: transparent;
+  background: transparent;
 }
 
 .chat-messages::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
 .chat-messages::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .chat-section.active .chat-messages {
-    opacity: 1;
-    max-height: calc(100vh - 220px);
-    display: block;
+  opacity: 1;
+  max-height: calc(100vh - 220px);
+  display: block;
 }
